# nuquake_enhanced

./: .gitignore  .gitlab-ci.yml  .gitmodules  Bruce_building_dreamcast.md  CHANGELOG.md  LICENSE.md  Makefile  Makefile.dc  Makefile.lin  Makefile.win  Makefile_custom.dc  Makefile_quake.dc  README.md  build-dc-gcc7.sh  cdda_guide.md  commands.txt  compiling_debug.txt  credits.txt  dreamcast.map  gcc  generic-release.md  kos_setup.txt  make_cdi.sh  makecdi.sh  meson.build  output.map  pkg_dreamcast.sh  showmeasm  showmeasm.bat  win_cross_build.txt
build_dc/: nuquake  nuquake.elf
cd/id1/: CONFIG.CFG
deps.old/GLdc-master/: CMakeLists.txt
deps.old/SDL/: libSDL.rar  readme.md
deps.old/SDL/include/: SDL_config_dreamcast.h  SDL_framerate.h  SDL_gfxPrimitives.h  math-sll.h
deps.old/cglm/include/cglm/: cglm.h  common.h
qclib/: initlib.c  pr_bgcmd.c  pr_exec.c  pr_multi.c  progsint.h  progslib.h  qcc.h  qcc.plg
qclib/qcvm/: qcvm.dsp  qcvm.plg
quake/client/: cl_demo.c  cl_input.c  cl_main.c  cl_parse.c  client.h  keys.c  menu.c  menu.h  menu_save_win32.h  render.h  snd_dma.c  snd_mem.c
quake/common/: bspfile.h  cmd.c  common.c  common.h  console.c  crc.c  cvar.c  cvar.h  draw.h  host.c  host_cmd.c  mathlib.c  net.h  net_dgrm.c  net_loop.c  net_main.c  protocol.h  qccmain.c  quakedef.h  sbar.c  wad.c  wad.h  world.c  world.h  zone.c
quake/common/unused/: net_dgrm.c  net_vcr.c
quake/dreamcast/: cd_dreamcast.c  net_dc.c  net_udp.c  snd_sdl.c  sys_dreamcast.c  vid_gldc.c  vmu_misc.c  vmu_misc.h  vmu_state.c  vmuheader.c  vmuheader.h
quake/linux/: sys_linux.c
quake/linux/unused/: in_sun.c  vid_svgalib.c
quake/null/: cd_null.c  vid_null.c
quake/renderer/: gl_batcher.c  gl_draw.c  gl_mesh.c  gl_model.c  gl_model.h  gl_refrag.c  gl_rmain.c  gl_rmisc.c  gl_rsurf.c  gl_rsurf_bak.txt  gl_screen.c  gl_warp.c  glquake.h  menu_loader.c  r_local.h  r_part.c
quake/server/: server.h  sv_main.c  sv_phys.c  sv_user.c
quake/vm/: execloop.h  pr_bgcmd.c  pr_client.c  pr_cmds.c  pr_common.h  pr_comp.h  pr_csqc.c  pr_edict.c  qcc.dsp  qcd_main.c  qcdecomp.c
quake/win32/: conproc.c  conproc.h  math.S  quakeasm.h  ref.h  vid_wgl.c
quake/win32/unused/: cd_win.c  mojoal.c  snd_dma_OAL.c  snd_mix_directx.c  snd_win_directx.c
qw/: Makefile.dc
qw/client/: bothdefs.h  cl_main.c  common.c  common.h  gl_draw.c  gl_rmisc.c  gl_rsurf.c  gl_screen.c  gl_vidnt.c  gl_warp.c  glquake.h  mathlib.h  net_chan.c  net_udp.c  sbar.c  screen.h  skin.c  snd_mem.c
qw/dreamcast/: aica.c  dc_sys.c  dc_vid.c  ram.c
scripts/: Makefile  scramble.sh
src/client/: aica.h  cl_demo.c  cl_input.c  cl_main.c  cl_parse.c  cl_tent.c  client.h  keys.c  menu.c  menu.h  menu_save_dreamcast.h  snd_dma.c  snd_mem.c  sound.h  vid.h  view.c
src/client/unused/: snd_dma.c  snd_mem.c
src/common/: bspfile.h  chase.c  cmd.c  cmd.h  common.c  common.h  console.c  cvar.c  cvar.h  host.c  host_cmd.c  mathlib.c  mathlib.h  net.h  quakedef.h  sbar.c  screen.h  sys.h  world.c  zone.c  zone.h
src/common/unused/: screen.c
src/dreamcast/: aica.c  cd_dreamcast.c  cd_kos.c  cd_sdl.c  dc_cd.c  fake_cdda.h  in_dreamcast.c  ram.c  sh4_math.h  snd_mix.c  snd_mix_dreamcast.c  snd_null.c  snd_sdl.c  snddma_dreamcast.c  sys_dreamcast.c  vid_gldc.c  vmu_misc.c  vmu_misc.h  vmu_state.c  vmu_state.h  vmuheader.c
src/dreamcast/unused/: aica.h  cd_dreamcast.c  cd_sdl.c  fake_cdda.c  libc_overrides.c  pvrdma.c  spu.c
src/dreamcast/unused/CURRENT_OLD_SOUND/: snd_mix_dreamcast.c  snddma_dreamcast.c
src/dreamcast/unused/sdl/: snd_dma.c  snd_mem.c  snd_mix.c  snd_sdl.c
src/dreamcast/unused/sound-openal/: snd_dreamcast.c  snd_mix_dreamcast.c
src/dreamcast/unused/sound_current/: aica.c  cd_dreamcast.c  snd_mix_dreamcast.c
src/dreamcast/unused/unused_2024/: aica.h
src/linux/: cd_linux.c  in_sun.c  net_udp.c  snd_null.c  vid_xgl.c
src/linux/unused/: vid_x.c
src/null/: cd_null.c  sys_null.c
src/renderer/: bait.txt  gl_batcher.c  gl_batcher.h  gl_batcher.last_night.txt  gl_draw.c  gl_local.h  gl_mesh.c  gl_model.c  gl_model.h  gl_refrag.c  gl_rlight.c  gl_rmain.c  gl_rmisc.c  gl_rsurf.c  gl_screen.c  gl_warp.c  glquake.h  menu_loader.c  r_part.c
src/server/: server.h  sv_main.c  sv_move.c  sv_phys.c  sv_user.c
src/vm/: pr_cmds.c  pr_edict.c  pr_exec.c  progdefs.q1  progs.h
src/win32/: cd_null.c  conproc.c  in_win.c  qasm.h  resource.h  snd_mix.c  sys_win.c  vid_wgl.c  winquake.h  winrc.rc
src/win32/unused/: net_win.c  net_wins.c  net_wipx.c
